# master-thesis

./: .clang-tidy  .fit-pages.yml  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  arena.h  defs.c  lexer.c  meson.build  notes.txt  tcg.c  test.sh  test.tc  thesis-contents.txt
benchmarks/: run_benchmarks.sh  sieve-bit-cse.c  sieve-bit-cse.tc  sieve-bit.c  sieve-bit.tc  sieve.c  sieve.tc
examples/: 2023-04-17-excessive_spilling.tc  2023-05-08-peephole-begin-block.tc  2023-05-13-spill-with-only-two-vregs-left.tc  syscall.tc
ref/: arguments.asm  arithmetic.asm  char.asm  cmp.asm  const.asm  critical_edge.asm  extern.asm  flag_loop.asm  folding.asm  for-loop.asm  funptr.asm  indexing.asm  mul.asm  shift.asm  strings.asm  struct_assignment.asm  structs.asm  switch.asm  ternary.asm  test.asm  test2.asm  test3.asm  test4.asm
src/: arena.c  arena.h  bitset.h  deconstruct_ssa.c  defs.c  environment.c  environment.h  inst.c  inst.h  ir.c  ir.h  lexer.c  lower.c  main.c  merge_blocks.c  one.c  parser.c  parser.h  peephole.c  regalloc.c  regalloc.h  single_exit.c  split_critical_edges.c  str.c  table.c  table.h  tcg.c  thread_jumps.c  type.c  type.h  utils.c  utils.h  value_numbering.c  worklist.c  worklist.h  x86-64.c  x86-64.h
src/backend/: inst.c  inst.h  regalloc.c  regalloc.h
src/backend/x86-64/: lower.c  peephole.c  x86-64.c  x86-64.h
src/frontend/c/: parser.c  parser.h
src/middleend/: ir.c  ir.h  passes.h  type.c  type.h
src/middleend/passes/: deconstruct_ssa.c  merge_blocks.c  single_exit.c  split_critical_edges.c  thread_jumps.c  value_numbering.c
src/utils/: arena.h  bitset.c  environment.c  str.h  utils.h  worklist.c
tests/: arguments.tc  arithmetic.tc  arrays.tc  cmp.tc  const.tc  critical_edge.tc  extern.tc  folding.tc  for-loop.tc  funptr.tc  indexing.tc  mul.tc  shift.tc  strings.tc  struct_alignment.tc  struct_assignment.tc  structs.tc  switch.tc  ternary.tc  test.tc  test2.tc  test3.tc  test4.tc
tests/in/: arguments.tc  char.tc  cmp.tc  const.tc  extern.tc  flag_loop.tc  funptr.tc  indexing.tc  strings.tc  struct_assignment.tc  test2.tc
tests/ref/: arguments.asm  arrays.asm  char.asm  extern.asm  folding.asm  indexing.asm  shift.asm  struct_alignment.asm  struct_assignment.asm  switch.asm  ternary.asm  test.asm  test2.asm  test4.asm
text/: vlasami6-dip.bib  vlasami6-dip.tex
